Fixed bug #902: Help icon aligned with the text : Kanchan

--- a/media/css/plugins/960gd/ie7.css
+++ b/media/css/plugins/960gd/ie7.css
@@ -117,3 +117,7 @@ span.error_arrow,#questionnaire-code-error, label.error_arrow{
 .all_projects{
     margin-top: -20px;
 }
+
+.help{
+    margin-right: 360px !important;
+}
